Refs #143927 - Fix layout issue.

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -18,6 +18,10 @@
 @wm-ff1: 'RobotoR', 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 @wm-ff2: 'PoppinsExtraB', 'PoppinsB', 'Poppins';
 
+body.searchlib-page .ui.basic.segment.content-area .ui.container#page-document {
+  margin: auto !important;
+}
+
 body.searchlib-page {
   div#page-document {
     top: 0px;
